--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -73,11 +73,9 @@
                         <nav class="nav flex-column">
                             <a class="nav-link" href="/createTimeslot">Set Availability times</a>
 
-                            <a class="nav-link" id="Edit" href="\update">Edit Consultation</a>
-
                             <a class="nav-link" id="Edit" href="\includeAnotherLecturer">Include another lecturer</a>
 
-                            <a class="nav-link" id="Edit" href="/update">Edit Consultation</a>
+            
                             <a class="nav-link" href="/Settings">Settings</a>
 
                             <a class="nav-link" href="/timeslots">View Timeslots</a>
@@ -102,7 +100,7 @@
 
                                     <th scope="col">Date & Time</th>
                                     <th scope="col">Event Title</th>
-                                    <th scope="col">Lecturer Name</th>
+                                    <th scope="col">Organiser Name</th>
                                     <th scope="col">Status</th>
                                     <th scope="col">Modify Meeting</th>
                                     <th scope="col">Cancel Meeting</th>
@@ -117,31 +115,39 @@
 
                                             <tr>
 
+                                                <td>                                                       
+                                                        <%= appointment.timeslot.date%>
+                                                        &
+                                                        <%= appointment.timeslot.availabilityTime%>                                                   
+                                        
+                                                    </td>
                                                 <td>
-                                                    <%= appointment.date %>
-                                                </td>
-                                                <td>
+                                                    
                                                     <%= appointment.eventTitle %>
                                                 </td>
-                                                <td>
-                                                    <%= appointment.lecturerName%>
+                                                <td><!--Coming soon-->
+                                                    <!--<%= appointment.lecturerName%>-->
                                                         <!--name of the student who created the appointment-->
                                                 </td>
                                                 <td>
                                                     <%= appointment.status%>
                                                 </td>
                                                 <td>
-                                                    <a class="nav-link" id="Edit"
-                                                        href="/update/<%= appointment.id %>">Edit</a>
+                                                    <a id="Edit"
+                                                        href="/update/<%= appointment.id %>" class="btn btn-secondary" role="button">Edit</a>
                                                 </td>
-                                                <td><a href="/cancel/<%= appointment.id %>">Cancel</a></td>
+                                                                                               <td>
+                                                        <% if(appointment.status==="Upcoming" ){ %>
+                                                            <a href="/cancel/<%= appointment.id %>" class="btn btn-danger" role="button">Cancel</a>
+
+                                                            <%}%>
+                                                </td>
                                             </tr>
                                             <%}%>
                                             <%}); %>
 
 
                                                 <%}%>
-
                             </tbody>
                         </table>
                     </div>
