--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -116,7 +116,9 @@
                                             <tr>
                                                 <td>
                                                     <!-- Need to fix -->
-                                                    <%= appointment.timeslot%>
+                                                    <%= appointment.timeslot.date%>
+                                                    &
+                                                    <%= appointment.timeslot.availabilityTime%>
                                                 </td>
                                                 <td>
                                                     <%= appointment.eventTitle %>
