student and lecturer cancelled appointments display

--- a/SRC/views/lecturerCancelledAppointments.ejs
+++ b/SRC/views/lecturerCancelledAppointments.ejs
@@ -102,9 +102,11 @@
                                             <%if (appointment.status === 'Cancelled') { %>
 
                                             <tr>
-
-                                                <td>
-                                                    <%= appointment.date %>
+                                                <td>                                                       
+                                                    <%= appointment.timeslot.date%>
+                                                    &
+                                                    <%= appointment.timeslot.availabilityTime%>                                                   
+                                    
                                                 </td>
                                                 <td>
                                                     <%= appointment.eventTitle %>
@@ -123,7 +125,6 @@
 
 
                                                 <%}%>
-
                             </tbody>
                         </table>
                     </div>
