--- a/SRC/views/timeslots.ejs
+++ b/SRC/views/timeslots.ejs
@@ -89,7 +89,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <% if(timeslots.length === 0){ %>
+                                <% if(timeslots.length===0){ %>
                                     <td>No timeslots available.</td>
                                     <% }else { %>
                                         <% timeslots.forEach(function(timeslot){ %>
@@ -105,15 +105,15 @@
                                                     <%= timeslot.date%>
                                                 </td>
                                                 <td>
-                                                    <a class="modify-timeslot" id="delete" 
-                                                    href="/cancel/timeslot/<%= timeslot.id %>">delete</a>
+                                                    <a id="delete"
+                                                        href="/cancel/timeslot/<%= timeslot.id %>"
+                                                        class="btn btn-danger" role="button">delete</a>
                                                 </td>
                                             </tr>
                                             <%}); %>
 
 
                                                 <%}%>
-
                             </tbody>
                         </table>
                     </div>
