--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -93,15 +93,16 @@
                 </section>
                 <div class="appointments-box">
                     <h2>Lecturer Appointments</h2>
+
                     <div class="table-responsive">
-                        <table class="table">
+                        <table class="table table-sortable" id="table">
                             <thead>
                                 <tr>
 
-                                    <th scope="col">Date & Time</th>
-                                    <th scope="col">Event Title</th>
-                                    <th scope="col">Lecturer Name</th>
-                                    <th scope="col">Status</th>
+                                    <th scope="col" onclick="sortTable(0)">Date & Time</th>
+                                    <th scope="col" onclick="sortTable(1)">Event Title</th>
+                                    <th scope="col" onclick="sortTable(2)">Lecturer Name</th>
+                                    <th scope="col" onclick="sortTable(3)">Status</th>
                                     <th scope="col">Modify Meeting</th>
                                     <th scope="col">Cancel Meeting</th>
                                 </tr>
@@ -150,6 +151,7 @@
         </div>
     </div>
     <script src="../scripts/hideflashmessage.js"></script>
+    <script src="../scripts/sortTableColumn.js"></script>
 </body>
 
 </html>
