--- a/SRC/views/timeslots.ejs
+++ b/SRC/views/timeslots.ejs
@@ -76,13 +76,13 @@
                 <div class="appointments-box">
                     <h2>Lecturer Timeslots</h2>
                     <div class="table-responsive">
-                        <table class="table">
+                        <table class="table" id="table">
                             <thead>
                                 <tr>
 
-                                    <th scope="col">Time</th>
-                                    <th scope="col">Number of Students</th>
-                                    <th scope="col">Date</th>
+                                    <th scope="col" onclick="sortTable(0)">Time</th>
+                                    <th scope="col" onclick="sortTable(1)">Number of Students</th>
+                                    <th scope="col" onclick="sortTable(2)">Date</th>
                                     <th scope="col">Delete Timeslot</th>
                                 </tr>
                             </thead>
@@ -123,6 +123,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="../scripts/sortTableColumn.js"></script>
 </body>
 
 </html>
