--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -101,7 +101,7 @@
 
                                     <th scope="col" onclick="sortTable(0)">Date & Time</th>
                                     <th scope="col" onclick="sortTable(1)">Event Title</th>
-                                    <th scope="col" onclick="sortTable(2)">Lecturer Name</th>
+                                    <th scope="col" onclick="sortTable(2)">Organiser Name</th>
                                     <th scope="col" onclick="sortTable(3)">Status</th>
                                     <th scope="col">Modify Meeting</th>
                                     <th scope="col">Cancel Meeting</th>
