--- a/SRC/views/studentDashboard.ejs
+++ b/SRC/views/studentDashboard.ejs
@@ -93,7 +93,7 @@
                                                     <td>                                                       
                                                         <%= appointment.timeslot.date%>
                                                         &
-                                                        <%= appointment.timeslot.availabilityTime%>
+                                                        <%= appointment.timeslot.startTime%>-<%= appointment.timeslot.endTime%>
                                                     </td>
 
                                                     <td>
