--- a/SRC/views/studentCancelledAppointments.ejs
+++ b/SRC/views/studentCancelledAppointments.ejs
@@ -84,7 +84,7 @@
                                                 <td>                                                       
                                                     <%= appointment.timeslot.date%>
                                                     &
-                                                    <%= appointment.timeslot.availabilityTime%>  
+                                                    <%= appointment.timeslot.startTime%>-<%= appointment.timeslot.endTime%> 
                                                 </td>
                                                 <td>
                                                     <%= appointment.eventTitle %>
