--- a/SRC/views/searchAppointment.ejs
+++ b/SRC/views/searchAppointment.ejs
@@ -9,6 +9,29 @@
     <title>Search Appointment</title>
 </head>
 <body>
+  <section id="header">
+    <!--navbar-->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/studentDashboard"><img style="width: 150px;" src="/images/LOGO.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/signout">Sign out</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+</section>
+<section style="padding: 100px;">
 
   <div class="search-page">
     <div id="pre-search-content">
@@ -49,5 +72,6 @@
 
       </form>
 </div>
+</section>
 </body>
 </html>
