--- a/SRC/views/logs.ejs
+++ b/SRC/views/logs.ejs
@@ -51,8 +51,7 @@
                         <nav class="nav flex-column">
                             <a class="nav-link active" aria-current="page" href="/scheduleAppointment">Set
                                 Appointment</a>
-                            <a class="nav-link" href="/availableTimeslots">View Available Time slots</a>
-                            <a class="nav-link" href="#">Cancel Appointments</a>
+                            <a class="nav-link" href="/timeslots">View Timeslots</a>
                             <a class="nav-link active" aria-current="page" href="/searchAppointment">Search
                                 Appointment</a>
                             <a class="nav-link" href="/Settings">Settings</a>
