show the name of the student who organized the meeting

--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -121,8 +121,7 @@
                                                     <%= appointment.eventTitle %>
                                                 </td>
                                                 <td>
-                                                    <%= appointment.lecturerName%>
-                                                        <!--name of the student who created the appointment-->
+                                                    <%= appointment.organizer%>
                                                 </td>
                                                 <td>
                                                     <%= appointment.status%>
