--- a/SRC/views/scheduleAppointment.ejs
+++ b/SRC/views/scheduleAppointment.ejs
@@ -37,6 +37,17 @@
             </nav>
         </header>
     </section>
+    <% if (successMessage.length> 0) { %>
+        <div class="alert alert-success">
+            <%= successMessage %>
+        </div>
+    
+          <% } else if (dangerMessage && dangerMessage.length > 0) { %>
+            <div class="alert alert-danger">
+              <%= dangerMessage %>
+            </div>
+          <% } %>
+
     <section style="padding: 100px;">
     <h3>Schedule Appointment</h3><br>
     <div class="card text-center">
@@ -73,6 +84,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+        <script src="../scripts/hideflashmessage.js"></script>
 </body>
 
 </html>
