--- a/SRC/views/studentDashboard.ejs
+++ b/SRC/views/studentDashboard.ejs
@@ -110,7 +110,7 @@
                                                     </td>--->
                                                     <td>
                                                         <% if(appointment.status==="Upcoming" ){ %>
-                                                            <a href="/cancel/<%= appointment.id %>" class="btn btn-danger" role="button">Leave Appointment</a>
+                                                            <a href="/cancel/<%= appointment.id %>" class="btn btn-danger" role="button">Cancel Appointment</a>
 
                                                         <%}%>
                                                 </td>
