timeslot flash messages

--- a/SRC/views/scheduleAppointment.ejs
+++ b/SRC/views/scheduleAppointment.ejs
@@ -37,14 +37,14 @@
             </nav>
         </header>
     </section>
-    <% if (successMessage.length> 0) { %>
+    <% if (asuccessMessage.length> 0) { %>
         <div class="alert alert-success">
-            <%= successMessage %>
+            <%= asuccessMessage %>
         </div>
     
-          <% } else if (dangerMessage && dangerMessage.length > 0) { %>
+          <% } else if (adangerMessage && adangerMessage.length > 0) { %>
             <div class="alert alert-danger">
-              <%= dangerMessage %>
+              <%= adangerMessage %>
             </div>
           <% } %>
 
